[features]
no-entrypoint = []

[package]
name = "circuiting_program"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
solana-program = "1.17.8"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[lib]
name = "circuiting_program"
crate-type = ["cdylib", "lib"]
